# routes/covidService.js
@@ -4,23 +4,23 @@ const apiAdapter = require('./apiAdapter')
 
 const verifyAppKey = require('../config/security/verifyAppKey')
 
-const BASE_URL = 'https://viacep.com.br/ws/'
+const BASE_URL = 'https://covid19-brazil-api.now.sh/api/report/v1/brazil/uf/'
 const api = apiAdapter(BASE_URL)
 
-router.get('/v1/address/:zipcode', verifyAppKey, (req, res, next) => {
+router.get('/v1/covid/uf/:uf', verifyAppKey, (req, res, next) => {
 
     /*
-        #swagger.description = 'Consultar endereço por CEP.'
+        #swagger.description = 'Consultar estatísticas do Covid por Estado.'
         #swagger.produces = ['application/json']
-        #swagger.parameters['zipcode'] = { description: 'CEP', example: '58900000' }
-        #swagger.tags = ['Query']
+        #swagger.parameters['uf'] = { description: 'UF', example: 'PB' }
+        #swagger.tags = ['Health']
     */
    
     /*
         #swagger.parameters['appkey'] = { description: 'AppKey', example: '8801084840929484' }
-    */      
+    */     
 
-    api.get(req.params.zipcode + '/json/').then(resp => {
+    api.get(req.params.uf).then(resp => {
         res.send(resp.data)
     })
 })
